[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/ItemContainter.gd" type="Script" id=1]
[ext_resource path="res://art/box_2/box_2_3.png" type="Texture" id=4]
[ext_resource path="res://art/box_1/box_1_4.png" type="Texture" id=5]
[ext_resource path="res://art/box_2/box_2_2.png" type="Texture" id=6]
[ext_resource path="res://art/box_2/box_2_1.png" type="Texture" id=7]
[ext_resource path="res://art/box_2/box_2_4.png" type="Texture" id=8]
[ext_resource path="res://art/box_1/box_1_1.png" type="Texture" id=9]
[ext_resource path="res://art/box_1/box_1_2.png" type="Texture" id=10]
[ext_resource path="res://art/box_1/box_1_3.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ) ],
"loop": false,
"name": "wood",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": false,
"name": "silver",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 3.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.25, 6.25 )

[node name="ItemContainer" type="StaticBody2D" groups=[
"Carriable",
"Clickable",
"ItemContainer",
]]
input_pickable = true
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2.5 )
frames = SubResource( 1 )
animation = "wood"
frame = 5

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -2.5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="ItemDetecter" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemDetecter"]
position = Vector2( 0, -0.5 )
rotation = 1.5708
shape = SubResource( 3 )

[connection signal="input_event" from="." to="." method="_on_ItemContainer_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_ItemContainer_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ItemContainer_mouse_exited"]
[connection signal="body_entered" from="ItemDetecter" to="." method="_on_ItemDetecter_body_entered"]
